# fenestra

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .tool-versions  MANIFEST.in  Makefile  README.md  default.nix  fenestra.py  launch.sh.jinja  notes.md  pyproject.toml  requirements.in  requirements.txt  screen.py  supervisor.conf.jinja  systemd.service.jinja  three.sh  uv
fenestra/: __init__.py  macbook-gb.xkb
fenestra/plugins/: battery.py  screen.py  sleep.py
fenestra/polybar/: bar.ini.jinja  battery.ini  battery.ini.jinja  i3-windows.ini.jinja  powermenu.ini  pulseaudio-control.ini  wlan.ini.jinja
plugins/: _common.py  devices.py  keyboard.py  network.py  screen.py  sleep.py
polybar/: .gitattributes  bar.ini  bar.ini.jinja  battery.ini  cpu.ini  date.ini  eth.ini  eth.ini.jinja  i3-windows.ini.jinja  i3.ini  mpd.ini  polybar-windows.ini  powermenu.ini  pulseaudio-control.ini  tray.ini  wlan.ini  wlan.ini.jinja
