[project]
name = "fenestra"
version = "0.1.0"
description = "Fenestra is a tool for setting up a windowing environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ewmh>=0.1.6",
  "Xlib",
  "xcffib",
  "jinja2",
  "pyudev",
  "ppretty",
  "supervisor",
  "randrctl >= 0.10.0",
  "pydbus",
  "dormer",
  "PyGObject",
  "polybar-i3-windows",
]

[dependency-groups]
dev = ["pre-commit"]

[tool.uv.sources]
dormer = { git = "https://github.com/palfrey/dormer.git" }
polybar-i3-windows = { git = "https://github.com/palfrey/polybar-i3-windows.git" }

[tool.setuptools]
include-package-data = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
fenestra = "fenestra:start"

[tool.uv]
python-preference = "only-managed"
